<resources>
    <string name="app_name">Apptitude Admin</string>
    <string name="version">v1.0</string>
    <string name="participants_title">Participants</string>
    <string name="teams_title">Teams</string>
    <string name="advanced_title">Advanced</string>
    <string name="search_hint">Type Something</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_notification">Send Notification</string>
    <string name="notification">Notification</string>
    //OTP input
    <string name="phoneNumber">Phone Number</string>
    <string name="phoneNumberDesc">We will send an OTP to this number for confirmation!</string>
    <string name="continue_btn">Continue</string>

    //Verification
    <string name="verificationTitle">Verification</string>
    <string name="enter_otp">Please Enter the OTP you have received</string>

    //Profile
    <string name="profile">Profile</string>
    <string name="profile_desc">Tell us your name and the power shall be yours!</string>
    <string name="note">Remember , with great power comes great responsibility!</string>

    //Splash
    <string name="great_power">Great Power</string>
    <string name="great_responsibility">Greater Responsibility!</string>
    <string name="admin">Admin App</string>
    <string name="acm">ACM VIT</string>

    //Advanced
    <string name="admin_greet">Welcome Admin!</string>
    <string name="admin_greet_sub">This is your panel</string>
    <string name="admin_events">Events</string>
    <string name="admin_submission">Submission Deadline</string>
    <string name="admin_submission_begin">Submission Begin</string>
    <string name="admin_event_status">Event Status</string>
    <string name="admin_triggers">Event Triggers</string>
    <string name="admin_notifications">Send Notifications!</string>
    <string name="upgrade_admin">Upgrade Admin</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="okay">Okay</string>

    //Misc
    <string name="app_dev_details">App Developer Details</string>
    <string name="team_members">Team Members</string>
    <string name="easy">Easy :</string>
    <string name="medium">Medium :</string>
    <string name="hard">Hard :</string>
    <string name="github">Github :</string>
    <string name="password">Password</string>
    <string name="cur_admin_lvl">Your current admin level is :</string>
    <string name="enter_admin_password">Enter Admin Password</string>
    <string name="request_privilege">Request Privileges</string>
    <string name="upgrade_admin_prev">Upgrade to a Privileged Admin</string>
    <string name="delete_btn">Delete Participant</string>
    <string name="statistics_title">Statistics</string>
    <string name="data_title">Data</string>

</resources>